# GDAPlanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: TableSetting.gda  openstacks-domain.pddl  openstacks-example.pddl  openstacks-problem.pddl  simple-tablesetting.pddl  simple-ts-domain.pddl  tablesetting-domain.pddl  tablesetting-problem.pddl
doc/: Doxyfile
include/gdaplanner/: Action.h  Alias.h  Context.h  Declaration.h  Expression.h  GDAPlanner.h  Planner.h  Predicate.h  Printable.h  Prolog.h  Solution.h  State.h  World.h
include/gdaplanner/contexts/: Context.h  PDDL.h  StatefulContext.h
include/gdaplanner/loaders/: Loader.h  PDDL.h
include/gdaplanner/planners/: ConvexPlanner.h  ForwardPlanner.h
include/gdaplanner/problems/: PDDL.h  Problem.h
src/: main.cpp  prolog_tool.cpp
src/gdaplanner/: Action.cpp  Alias.cpp  Context.cpp  Declaration.cpp  Expression.cpp  GDAPlanner.cpp  Planner.cpp  Predicate.cpp  Printable.cpp  Prolog.cpp  Solution.cpp  State.cpp  World.cpp
src/gdaplanner/contexts/: Context.cpp  PDDL.cpp  StatefulContext.cpp
src/gdaplanner/loaders/: Loader.cpp  PDDL.cpp
src/gdaplanner/planners/: ConvexPlanner.cpp  ForwardPlanner.cpp
src/gdaplanner/problems/: PDDL.cpp  Problem.cpp
src/tests/: basic_prolog_imply.cpp  basic_prolog_operations.cpp  basic_prolog_operations_and.cpp  basic_prolog_operations_bound.cpp  basic_prolog_operations_equal.cpp  basic_prolog_operations_member.cpp  basic_prolog_operations_not.cpp  basic_prolog_operations_or.cpp  basic_prolog_true_false.cpp  basic_prolog_world.cpp  compound_prolog_operations.cpp  expression_equality.cpp  expression_negate.cpp  parse_pddl.cpp  world_assertions.cpp
